--- a/package.json
+++ b/package.json
@@ -1,43 +1,49 @@
 {
-  "name": "koremd-app",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
+  "name": "koremd",
+  "version": "1.0.0",
+  "description": "これMD(マジ)? - Simple Markdown Editor supporting Moldova 🇲🇩",
+  "author": "PYU224",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "test:e2e": "cypress run",
-    "test:unit": "vitest",
-    "lint": "eslint ."
+    "android": "ionic capacitor run android",
+    "ios": "ionic capacitor run ios",
+    "electron": "electron .",
+    "electron:build": "electron-builder"
   },
   "dependencies": {
-    "@capacitor/app": "7.1.0",
-    "@capacitor/core": "7.4.4",
-    "@capacitor/haptics": "7.0.2",
-    "@capacitor/keyboard": "7.0.3",
-    "@capacitor/status-bar": "7.0.3",
-    "@ionic/vue": "^8.0.0",
-    "@ionic/vue-router": "^8.0.0",
-    "ionicons": "^7.0.0",
-    "vue": "^3.3.0",
-    "vue-router": "^4.2.0"
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/app": "^7.1.0",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/filesystem": "^7.1.4",
+    "@capacitor/ios": "^7.4.4",
+    "@capacitor/share": "^7.0.2",
+    "@capacitor/splash-screen": "^7.0.3",
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@ionic/vue": "^8.7.10",
+    "@ionic/vue-router": "^8.7.10",
+    "codemirror": "^6.0.2",
+    "highlight.js": "^11.11.1",
+    "ionicons": "^8.0.13",
+    "marked": "^17.0.0",
+    "pinia": "^3.0.4",
+    "vue": "^3.5.24",
+    "vue-i18n": "^11.1.12",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@capacitor/cli": "7.4.4",
-    "@vitejs/plugin-legacy": "^5.0.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.3.0",
-    "cypress": "^13.5.0",
-    "eslint": "^8.35.0",
-    "eslint-plugin-vue": "^9.9.0",
-    "jsdom": "^22.1.0",
-    "terser": "^5.4.0",
-    "typescript": "~5.9.0",
-    "vite": "^5.0.0",
-    "vitest": "^0.34.6",
-    "vue-tsc": "^2.1.10"
-  },
-  "description": "An Ionic project"
+    "@capacitor/assets": "^3.0.5",
+    "@capacitor/cli": "^7.4.4",
+    "@ionic/cli": "^7.2.1",
+    "@types/node": "^24.10.1",
+    "@vitejs/plugin-vue": "^6.0.2",
+    "electron": "^39.2.3",
+    "electron-builder": "^26.0.12",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.4",
+    "vue-tsc": "^3.1.4"
+  }
 }
